force-app/main/default/objects/Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fluent Hosted Events</relationshipLabel>
    <relationshipName>FluentHostedEvents</relationshipName>
    <type>Lookup</type>
</CustomField>