force-app/main/default/objects/Event__c/fields/Annual_Event__c.field-meta.xml
<CustomField>
    <fullName>Annual_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Event</label>
    <type>Checkbox</type>
</CustomField>