force-app/main/default/objects/Event__c/fields/Can_items_be_sold_at_this_event__c.field-meta.xml
<CustomField>
    <fullName>Can_items_be_sold_at_this_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can items be sold at this event?</label>
    <type>Checkbox</type>
</CustomField>