force-app/main/default/objects/Event__c/fields/Date_Submitted_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_Payment__c</fullName>
    <description>The date you submitted for payment, paid for the event (if using a credit card), etc.</description>
    <label>Date Submitted for Payment</label>
    <type>Date</type>
</CustomField>