force-app/main/default/objects/Event__c/fields/Does_this_event_have_a_concert__c.field-meta.xml
<CustomField>
    <fullName>Does_this_event_have_a_concert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does this event have a concert?</label>
    <type>Checkbox</type>
</CustomField>