force-app/main/default/objects/Event__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Event Name (if applicable)</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>CampusEvent</relationshipName>
    <type>Lookup</type>
</CustomField>