force-app/main/default/objects/Event__c/fields/Event_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendance__c</fullName>
    <label>School Event Attendance (if applicable)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>