force-app/main/default/objects/Event__c/fields/Event_Attendence__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendence__c</fullName>
    <label>Event Attendence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>