force-app/main/default/objects/Event__c/fields/Event_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Event_Day_of_the_Week__c</fullName>
    <label>Event Day of the Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Weekday</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>