force-app/main/default/objects/Event__c/fields/Event_Host_Department__c.field-meta.xml
<CustomField>
    <fullName>Event_Host_Department__c</fullName>
    <label>Event Host Department</label>
    <length>200</length>
    <type>Text</type>
</CustomField>