force-app/main/default/objects/Event__c/fields/Event_Location_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Feedback__c</fullName>
    <label>Event Location Feedback</label>
    <type>TextArea</type>
</CustomField>