force-app/main/default/objects/Event__c/fields/Event_Moment__c.field-meta.xml
<CustomField>
    <fullName>Event_Moment__c</fullName>
    <label>Event Moment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Week</fullName>
            </value>
            <value>
                <fullName>Homecoming</fullName>
            </value>
            <value>
                <fullName>Family Weekend</fullName>
            </value>
            <value>
                <fullName>Finals Week</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>