force-app/main/default/objects/Event__c/fields/Event_Prizing_Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Event_Prizing_Total_Expense__c</fullName>
    <label>Event Prizing Total Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>