force-app/main/default/objects/Event__c/fields/Event_Time_of_D__c.field-meta.xml
<CustomField>
    <fullName>Event_Time_of_D__c</fullName>
    <label>Event Time of Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>All day</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Mid-Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>