force-app/main/default/objects/Event__c/fields/Event_Type_NEW__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_NEW__c</fullName>
    <label>Event Type (NEW 08242023)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dance Marathon</fullName>
            </value>
            <value>
                <fullName>Carnival_Festival</fullName>
                <label>Carnival / Festival</label>
            </value>
            <value>
                <fullName>Late Night Programming</fullName>
            </value>
            <value>
                <fullName>Other- (please leave notes in comments)</fullName>
            </value>
            <value>
                <fullName>Relay For Life</fullName>
            </value>
            <value>
                <fullName>Student Organization Hosted</fullName>
            </value>
            <value>
                <fullName>The Big Event</fullName>
            </value>
            <value>
                <fullName>Up Till Dawn</fullName>
            </value>
            <value>
                <fullName>Wellness Event</fullName>
            </value>
            <value>
                <fullName>Race</fullName>
            </value>
            <value>
                <fullName>Activity Fair</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Game Day</fullName>
            </value>
            <value>
                <fullName>Housing Fair</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Career</fullName>
            </value>
            <value>
                <fullName>Carnival</fullName>
                <isActive>false</isActive>
                <label>Carnival</label>
            </value>
            <value>
                <fullName>Family Weekend- Information Fair</fullName>
                <isActive>false</isActive>
                <label>Family Weekend- Information Fair</label>
            </value>
            <value>
                <fullName>Greek Event</fullName>
                <isActive>false</isActive>
                <label>Greek Event</label>
            </value>
            <value>
                <fullName>Homecoming Week</fullName>
                <isActive>false</isActive>
                <label>Homecoming Week</label>
            </value>
            <value>
                <fullName>Homecoming Week- Concert</fullName>
                <isActive>false</isActive>
                <label>Homecoming Week- Concert</label>
            </value>
            <value>
                <fullName>Homecoming Week- Dance/Ball</fullName>
                <isActive>false</isActive>
                <label>Homecoming Week- Dance/Ball</label>
            </value>
            <value>
                <fullName>Homecoming Week- Kickoff Event</fullName>
                <isActive>false</isActive>
                <label>Homecoming Week- Kickoff Event</label>
            </value>
            <value>
                <fullName>Rec Center Event- NIRSA</fullName>
                <isActive>false</isActive>
                <label>Rec Center Event- NIRSA</label>
            </value>
            <value>
                <fullName>Residence Life Event</fullName>
                <isActive>false</isActive>
                <label>Residence Life Event</label>
            </value>
            <value>
                <fullName>Rivalry Football Game</fullName>
                <isActive>false</isActive>
                <label>Rivalry Football Game</label>
            </value>
            <value>
                <fullName>Spirit Week</fullName>
                <isActive>false</isActive>
                <label>Spirit Week</label>
            </value>
            <value>
                <fullName>Student Organization- Bingo</fullName>
                <isActive>false</isActive>
                <label>Student Organization- Bingo</label>
            </value>
            <value>
                <fullName>Student Organization- Drag Show</fullName>
                <isActive>false</isActive>
                <label>Student Organization- Drag Show</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>