force-app/main/default/objects/Event__c/fields/Fall_2021_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Fall_2021_Event_Date__c</fullName>
    <inlineHelpText>Formerly Fall 2021 Event Date</inlineHelpText>
    <label>Upcoming Event Date</label>
    <type>Date</type>
</CustomField>