force-app/main/default/objects/Event__c/fields/Fall_2021_Event_Happening__c.field-meta.xml
<CustomField>
    <fullName>Fall_2021_Event_Happening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upcoming Event Happening?</label>
    <type>Checkbox</type>
</CustomField>