force-app/main/default/objects/Event__c/fields/Fluent_Event_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Fluent_Event_End_Date_Time__c</fullName>
    <label>Event End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>