force-app/main/default/objects/Event__c/fields/Fluent_Event_Planner__c.field-meta.xml
<CustomField>
    <fullName>Fluent_Event_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R&amp;B Event Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>