force-app/main/default/objects/Event__c/fields/Foot_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Foot_Traffic__c</fullName>
    <label>Event Location Foot Traffic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sparse</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Steady</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>