force-app/main/default/objects/Event__c/fields/General_Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Event_Notes__c</fullName>
    <label>General Event Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>