force-app/main/default/objects/Event__c/fields/Key_Promoter__c.field-meta.xml
<CustomField>
    <fullName>Key_Promoter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Promoter</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>