force-app/main/default/objects/Event__c/fields/Lead_Campus_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campus_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Campus Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Lead Campus Contact)</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>