force-app/main/default/objects/Event__c/fields/NextGen_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>NextGen_Last_Modified_By__c</fullName>
    <label>NextGen Last Modified By</label>
    <length>60</length>
    <type>Text</type>
</CustomField>