force-app/main/default/objects/Event__c/fields/Opportunity_del_del__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_del_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events_del1</relationshipName>
    <type>Lookup</type>
</CustomField>