force-app/main/default/objects/Event__c/fields/Philanthropy_Cause__c.field-meta.xml
<CustomField>
    <fullName>Philanthropy_Cause__c</fullName>
    <label>Philanthropy Cause</label>
    <type>TextArea</type>
</CustomField>