force-app/main/default/objects/Event__c/fields/Philanthropy_Tie_In__c.field-meta.xml
<CustomField>
    <fullName>Philanthropy_Tie_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Philanthropy Tie-In</label>
    <type>Checkbox</type>
</CustomField>