force-app/main/default/objects/Event__c/fields/School_Event_Associated_With__c.field-meta.xml
<CustomField>
    <fullName>School_Event_Associated_With__c</fullName>
    <label>School Event Name (if applicable)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>