force-app/main/default/objects/Event__c/fields/School_University_del__c.field-meta.xml
<CustomField>
    <fullName>School_University_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School/University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>On Campus Events</relationshipLabel>
    <relationshipName>OnCampusEvents_del</relationshipName>
    <type>Lookup</type>
</CustomField>