force-app/main/default/objects/Event__c/fields/Sponsorship_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsorship opportunity?</label>
    <type>Checkbox</type>
</CustomField>