force-app/main/default/objects/Event__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <label>Event Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>