force-app/main/default/objects/Event__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>TextArea</type>
</CustomField>