force-app/main/default/objects/Event__c/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <label>Type of Event</label>
    <length>200</length>
    <type>Text</type>
</CustomField>