force-app/main/default/objects/Event__c/recordTypes/Off_Campus_Event.recordType-meta.xml
<RecordType>
    <fullName>Off_Campus_Event</fullName>
    <active>true</active>
    <description>Events hosted off campus near a university</description>
    <label>Off Campus Event</label>
</RecordType>