force-app/main/default/objects/Event__c/recordTypes/On_Campus_Event.recordType-meta.xml
<RecordType>
    <fullName>On_Campus_Event</fullName>
    <active>true</active>
    <label>On Campus Event</label>
</RecordType>