force-app/main/default/objects/Event__c/recordTypes/RandB_Hosted_Event.recordType-meta.xml
<RecordType>
    <fullName>RandB_Hosted_Event</fullName>
    <active>true</active>
    <label>R&amp;B Hosted Event</label>
</RecordType>