force-app/main/default/objects/Event__c/recordTypes/TPG_Hosted_Events_Fluent_Hosted_Events.recordType-meta.xml
<RecordType>
    <fullName>TPG_Hosted_Events_Fluent_Hosted_Events</fullName>
    <active>true</active>
    <label>TPG Hosted Events (Fluent Hosted Events)</label>
</RecordType>