force-app/main/default/objects/Event__c/listViews/FluentHostedEvents.listView-meta.xml
<ListView>
    <fullName>FluentHostedEvents</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Lead_Campus_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Event__c.On_Campus_Event</value>
    </filters>
    <label>Fluent Hosted Events</label>
</ListView>