force-app/main/default/objects/Event__c/listViews/Payment_Status.listView-meta.xml
<ListView>
    <fullName>Payment_Status</fullName>
    <columns>NAME</columns>
    <columns>Date_Submitted_for_Payment__c</columns>
    <columns>Event_Cost__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event__c.RandB_Hosted_Event</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Venmo</value>
    </filters>
    <label>Payment Status</label>
</ListView>