force-app/main/default/objects/Event__c/listViews/Vera_Bradley_Event_Flow.listView-meta.xml
<ListView>
    <fullName>Vera_Bradley_Event_Flow</fullName>
    <columns>NAME</columns>
    <columns>School_University_del__c</columns>
    <columns>Event_Location__c</columns>
    <columns>Event_Time_of_D__c</columns>
    <columns>Event_Month__c</columns>
    <columns>Lead_Campus_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event__c.On_Campus_Event</value>
    </filters>
    <label>Vera Bradley Event Flow</label>
</ListView>